...
        baseColor: const Color(0xFFa1a1a1),
        highlightColor: const Color(0xFFe1e1e1),
        child: ListView.builder(
          shrinkWrap: true,
          itemBuilder: (context, index) {
            return Container(
              key: const Key('article_list_item'),
              margin: const EdgeInsets.only(
                bottom: 16,
                left: 24.0,
                right: 24.0,
              ),
              child: Row(
...
