...
              const Text('Category'),
              Container(
                height: 120,
                width: double.infinity,
                color: AppColors.whiteColor,
                child: ListView(
                  key: const Key('article_category'),
                  scrollDirection: Axis.horizontal,
                  children: [
                    GestureDetector(
                      onTap: () => Navigator.push(
                        context,
                        MaterialPageRoute(
...
